[package]
name = "td-program-sdk"
version = "0.1.1"
edition = "2021"
description = "A Rust SDK for interacting with the Tower Defense Solana program"
license = "MIT"
repository = "https://github.com/Mantistc/tower-defense-program"
keywords = ["solana", "blockchain", "sdk", "tower-defense"]
categories = ["cryptography", "game-development", "api-bindings"]
readme = "README.md"

[dependencies]
solana-program = { workspace = true}
